<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    android:gravity="center"
    android:background="@drawable/back">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validation_text"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/edit_text_color"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/choice_msg"
        android:textSize="14sp"
        android:textColor="@color/edit_text_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/circular_submit_btn"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/circular_submit_btn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"/>









    </LinearLayout>

</LinearLayout>