<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        style="@style/HeaderTextView"
        android:gravity="center"
        android:text="@string/forgot_pass" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/circular_grey_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.gionee.gioneeabc.helpers.FontImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="k"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:hint="@string/email"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"

            />
    </LinearLayout>


    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ripple_submit_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>