<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.gionee.gioneeabc.fragments.RecommProductListFragment">

    <RelativeLayout
        android:id="@+id/rl_filter_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_filter_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:text="@string/text_filter_result"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_top_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_filter_result_title"
            android:layout_below="@+id/tv_filter_result_title"
            android:layout_marginTop="2dp"
            android:text="@string/text_top_result"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_theme_border"
            android:paddingBottom="12dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="12dp"
            android:text="@string/text_filter"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_filter_attrib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_filter_attrib"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_sort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_sort"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="@string/text_sort"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/c_divider" />

            <TextView
                android:id="@+id/tv_filter_attrib"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/text_filter"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/c_divider" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:padding="14dp"
                android:src="@drawable/ic_search" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/ll_filter_attrib"
            android:background="@color/c_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/box_boder"
            android:hint="Search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_clear_black_24dp"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="No result found"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
